--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,15 +1,40 @@
 .logohome {
   height: 80px;
   width: 100px;
+  
 }
 
 .nav-menu {
   font-size:x-large;
+  margin-right: 5vw;
 }
 
 .nav-link {
+  position: relative;
   padding: 15px !important;
+  font-weight: 1000;
 }
+
+/* .nav-link  */
+
+.nav-link:before {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 2px;
+  bottom: 11px;
+  left: 8%;
+  background-color: #752a87;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-link:hover:before {
+  width:90%;
+  visibility: visible;
+}
+
+
 
 .NavBar {
   background-color: #f9fa;
