--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -43,12 +43,12 @@
         
 }
 .card-info{
+    font-weight: bold;
     width: 100%;
     padding-left: 75px;
     padding-top: 90px;
     white-space: nowrap; 
     overflow: hidden;
-    text-overflow: "..."; 
 }
 .card-content{
     color: rebeccapurple;
